--- a/Webscraping Notebooks/Speciality Coffee Web Scrape (Common Man).ipynb
+++ b/Webscraping Notebooks/Speciality Coffee Web Scrape (Common Man).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "a1c8ce6c-938e-447b-8726-48dcbcf3d945",
    "metadata": {},
    "outputs": [
@@ -45,6 +45,21 @@
     "        return f\"{match.group(1)} - {match.group(2)}\"\n",
     "    return \"\"\n",
     "\n",
+    "def extract_tasting_notes_from_blend(body_html):\n",
+    "    \"\"\"\n",
+    "    For blend products, extracts the tasting notes by looking for a phrase\n",
+    "    such as \"; we taste ...\" (or with a colon) and captures the text after it,\n",
+    "    up to the first period or the end of the text.\n",
+    "    \"\"\"\n",
+    "    soup = BeautifulSoup(body_html, 'html.parser')\n",
+    "    text = soup.get_text(separator=\" \").strip()\n",
+    "    # The regex allows an optional semicolon or colon before \"we taste\"\n",
+    "    match = re.search(r\"(?:;|:)?\\s*we taste\\s+(.+?)(\\.|$)\", text, re.IGNORECASE)\n",
+    "    if match:\n",
+    "        tasting = match.group(1).strip()\n",
+    "        return tasting\n",
+    "    return \"\"\n",
+    "\n",
     "def process_products(url, csv_filename):\n",
     "    response = requests.get(url)\n",
     "    if response.status_code != 200:\n",
@@ -54,7 +69,7 @@
     "    data = response.json()\n",
     "    products = data.get(\"products\", [])\n",
     "\n",
-    "    # Define CSV columns\n",
+    "    # Define CSV columns (including split variant parts)\n",
     "    fieldnames = [\n",
     "        \"Handle\",\n",
     "        \"Primary Image URL\",\n",
@@ -90,26 +105,35 @@
     "            availability = \"Available\" if product_availability else \"Not Available\"\n",
     "            body_html = product.get(\"body_html\", \"\")\n",
     "\n",
-    "            # Extract additional product-level details from the HTML description\n",
-    "            tasting_notes = extract_field(body_html, \"Tasting Notes\")\n",
+    "            # Use the blend extraction if the handle contains \"blend\" (case-insensitive)\n",
+    "            if \"blend\" in handle.lower():\n",
+    "                tasting_notes = extract_tasting_notes_from_blend(body_html)\n",
+    "            else:\n",
+    "                tasting_notes = extract_field(body_html, \"Tasting Notes\")\n",
+    "\n",
     "            producer = extract_field(body_html, \"Producer\")\n",
     "            region = extract_field(body_html, \"Region\")\n",
     "            variety = extract_field(body_html, \"Variety\")\n",
     "            altitude = extract_field(body_html, \"Altitude\")\n",
     "            processing = extract_field(body_html, \"Process\")\n",
     "            harvest = extract_harvest(body_html)\n",
-    "            brewing = \"\"  # Brewing column remains empty since \"Brewing Products\" are skipped\n",
+    "            brewing = \"\"  # Brewing column remains empty as brewing products are skipped\n",
     "\n",
-    "            # Loop through each variant; each row corresponds to one variant.\n",
+    "            # Loop through each variant; only keep variants whose title contains \"Whole Beans\"\n",
+    "            # and skip any variant that contains \"(Wholesale)\".\n",
     "            for variant in product.get(\"variants\", []):\n",
     "                variant_name = variant.get(\"title\", \"\")\n",
-    "                # Only keep rows if the variant title contains \"Whole Beans\" (case-insensitive)\n",
     "                if \"whole beans\" not in variant_name.lower():\n",
+    "                    continue\n",
+    "                if \"(wholesale)\" in variant_name.lower():\n",
+    "                    continue\n",
+    "                if \"(corporate)\" in variant_name.lower():\n",
+    "                    continue\n",
+    "                if \"(kkreate)\" in variant_name.lower():\n",
     "                    continue\n",
     "\n",
     "                # Split the variant title by \" / \" into three parts.\n",
     "                parts = [p.strip() for p in variant_name.split(\" / \")]\n",
-    "                # Ensure we have three parts by padding if needed.\n",
     "                if len(parts) < 3:\n",
     "                    parts += [\"\"] * (3 - len(parts))\n",
     "                variant_part1, variant_part2, variant_part3 = parts[:3]\n",
